--- a/report.html
+++ b/report.html
@@ -20,6 +20,13 @@
         th {
             background-color: #f2f2f2;
         }
+        .delete-btn {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +41,7 @@
                     <th>Complaint/Issue</th>
                     <th>Date & Time</th>
                     <th>Feedback/Summary</th>
+                    <th>Action</th> <!-- New column for actions -->
                 </tr>
             </thead>
             <tbody>
