--- a/report.html
+++ b/report.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Add some basic styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            margin: auto;
+        }
+        h1 {
+            text-align: center;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
@@ -27,6 +37,11 @@
             padding: 5px 10px;
             cursor: pointer;
         }
+        button {
+            margin-top: 20px;
+            padding: 10px 15px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +50,7 @@
         <table id="queryTable">
             <thead>
                 <tr>
-                    <th>Token</th>
+                    <th>Token No</th>
                     <th>Institution Name</th>
                     <th>Branch Code</th>
                     <th>Complaint/Issue</th>
@@ -52,6 +67,59 @@
         <button onclick="window.location.href='index.html'">Back to Submission</button>
     </div>
 
-    <script src="report.js"></script>
+    <script>
+        function displayQueries() {
+            const queries = JSON.parse(localStorage.getItem('queries')) || [];
+            const queryTableBody = document.getElementById('queryTable').getElementsByTagName('tbody')[0];
+            queryTableBody.innerHTML = ''; // Clear existing rows
+
+            queries.forEach((query, index) => {
+                const row = queryTableBody.insertRow();
+                // Display the serial number based on the current index
+                row.insertCell(0).textContent = index + 1; // Serial number starts from 1
+                row.insertCell(1).textContent = query.institutionName;
+                row.insertCell(2).textContent = query.branchCode;
+                row.insertCell(3).textContent = query.complaint;
+                row.insertCell(4).textContent = query.dateTime;
+                row.insertCell(5).textContent = query.feedback;
+
+                // Create a delete button
+                const deleteCell = row.insertCell(6);
+                const deleteButton = document.createElement('button');
+                deleteButton.textContent = 'Delete';
+                deleteButton.className = 'delete-btn';
+                deleteButton.onclick = function() {
+                    deleteQuery(index);
+                };
+                deleteCell.appendChild(deleteButton);
+            });
+        }
+
+        function deleteQuery(index) {
+            let queries = JSON.parse(localStorage.getItem('queries')) || [];
+            queries.splice(index, 1);
+            localStorage.setItem('queries', JSON.stringify(queries));
+            displayQueries();
+        }
+
+        document.getElementById('exportBtn').addEventListener('click', function() {
+            const queries = JSON.parse(localStorage.getItem('queries')) || [];
+            let xlsContent = 'Token No\tInstitution Name\tBranch Code\tComplaint/Issue\tDate & Time\tFeedback/Summary\n';
+
+            queries.forEach(query => {
+                xlsContent += `${query.token}\t${query.institutionName}\t${query.branchCode}\t${query.complaint}\t${query.dateTime}\t${query.feedback}\n`;
+            });
+
+            const blob = new Blob([xlsContent], { type: 'application/vnd.ms-excel' });
+            const link = document.createElement("a");
+            link.href = URL.createObjectURL(blob);
+            link.download = "kimis_queries_report.xls";
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        });
+
+        displayQueries();
+    </script>
 </body>
 </html>
